--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ button {
   font-size: 18px;
   border: none;
   border-radius: 10px;
-  background-color: #007bff;
+  background-color:goldenrod;
   color: white;
   cursor: pointer;
   transition: 0.3s;
